objects/FSL_Communication_RegionToggles__mdt.object
<CustomObject>
    <fields>
        <fullName>Authorized_Work_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Work Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMS</fullName>
                    <default>true</default>
                    <label>BMS</label>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>DBS</fullName>
                </value>
                <value>
                    <fullName>MOVEX_TEST</fullName>
                    <isActive>false</isActive>
                    <label>MOVEX_TEST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <label>Email Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Never/Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Ready_For_Pick_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Ready For Pick Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Work_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Work Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Work_Proceeding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Work Proceeding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Frequency__c</fullName>
        <label>Text Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Never/Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Troubleshooting_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshooting Started</label>
        <type>Checkbox</type>
    </fields>
    <label>FSL_Communication_RegionToggles</label>
    <pluralLabel>FSL_Communication_RegionToggles</pluralLabel>
</CustomObject>